added detail pages

--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
             <div class="half-width">
                 <nav>
                     <ul>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#recipes">Recipes</a></li>
-                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="about/index.html">About</a></li>
+                        <li><a href="blog/index.html">Blog</a></li>
+                        <li><a href="recipes/index.html">Recipes</a></li>
                         <li><a href="#contact">Contact</a></li>
+                        <li><a href="#search"><i class="fa fa-search"></i></a></li>
                     </ul>
                 </nav>
             </div>  
