--- a/index.html
+++ b/index.html
@@ -85,18 +85,18 @@
         
     <footer id="contact">
             <div class="row">
-                <div class="col-6">
+                <div class="col-12 col-md-6">
                     <figure id="footer-logo">
-                        <img src="img/kelsey-logo.png">
+                        <img src="img/logo-white.png">
                     </figure>
                     <p>Copyright kelseysloan.com</p>
                     <p>Design by <a href="http://www.ceilisphere.ca" target="_blank">Ceilisphere design</a></p>
                 </div>
 
-                <div class="col-6">
-                    <h2>Say hi! <a href="mailto:hi@keylseysloan.com"><i class="fa fa-envelope-o"></i></a></h2>
+                <div class="col-12 col-md-6">
+                    <h2>Say hi!<a href="mailto:hi@keylseysloan.com"><i class="fa fa-envelope-o"></i></a></h2>
                     <h3>Let's connect!</h3>
-                    <ul>
+                    <ul class="social-icons">
                         <li><a href="https://www.facebook.com/kelseysloan"><i class="fa fa-facebook-square"></i></a></li>
                         <li><a href="https://www.instagram.com/kelseysloan"><i class="fa fa-instagram"></i></a></li>
                         <li><a href="https://www.twitter.com/kelseysloan"><i class="fa fa-twitter"></i></a></li>
