tablet and desktop styles added

--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
 
         <header>
             <div class="row">
-	            <div class="col-12">
-	                <h1>Kelsey Sloan</h1>
+	            <div class="col-sm-12">
+	            	<div class="">
+	                	<h1>Kelsey Sloan</h1>
+	                </div>	
 	            
 	                <div class="dropdown">
 	                	<button class="dropbtn"><i class="fa fa-bars"></i></button>
@@ -44,7 +46,7 @@
     <main>
         <section id="about">
             <div class="row">
-            	<div class="col-12">
+            	<div class="col-sm-12">
 	                <img src="img/hero-img.jpg" alt="Beautiful British Columbia" />
 	                <h2>Hey, I'm Kelsey!</h2>
 	                <p>I am a born and bred BC girl who loves the outdoors. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eu porttitor elit. Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer eu porttitor elit. Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
@@ -54,46 +56,47 @@
 
         <section id="feed">
             <div class="row">
+            	<div class="col-sm-12">
+	                <h1>Latest Posts</h1>
 
-                <h1>Latest Posts</h1>
+	                <div class="col-lg-4">
+	                    <h3>BLOG</h3>
+	                    <h2><a href="blog/blog-detail.html">Layering Guide : How to Stay Warm While Hunting</a></h2>
+	                    <p>Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
+	                </div>
 
-                <div class="col-lg-4">
-                    <h3>BLOG</h3>
-                    <h2><a href="blog/blog-detail.html">Layering Guide : How to Stay Warm While Hunting</a></h2>
-                    <p>Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
-                </div>
+	                <div class="col-lg-4">
+	                    <h3>RECIPE</h3>
+	                    <h2><a href="recipes/recipe-detail.html">Wild BC Salmon</a></h2>
+	                    <p>Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
+	                </div>
 
-                <div class="col-lg-4">
-                    <h3>RECIPE</h3>
-                    <h2><a href="recipes/recipe-detail.html">Wild BC Salmon</a></h2>
-                    <p>Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
-                </div>
+	                <div class="col-lg-4">
+	                    <h3>RECIPE</h3>
+	                    <h2><a href="recipes/recipe-detail.html">Wild Goose Risotto Recipe and Harvesting My First Snow Goose</a></h2>
+	                    <p>Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
+	                </div>
 
-                <div class="col-lg-4">
-                    <h3>RECIPE</h3>
-                    <h2><a href="recipes/recipe-detail.html">Wild Goose Risotto Recipe and Harvesting My First Snow Goose</a></h2>
-                    <p>Etiam non faucibus lacus, feugiat scelerisque nulla. Fusce nec aliquet tortor. Phasellus in commodo nisi. Sed nec condimentum felis, at varius enim.</p>
-                </div>
+	                <form action="blog/index.html">
+	                    <input type="submit" value="SEE MORE"/>
+	                </form>
 
-                <form action="blog/index.html">
-                    <input type="submit" value="SEE MORE"/>
-                </form>
-
-            </div>
+	            </div>
+	        </div>        
         </section>
     </main>
         
     <footer id="contact">
             <div class="row">
-                <div class="col-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <figure id="footer-logo">
                         <img src="img/logo-white.png">
                     </figure>
-                    <p>Copyright kelseysloan.com</p>
+                    <p>Copyright 2018 kelseysloan.com</p>
                     <p>Design by <a href="http://www.ceilisphere.ca" target="_blank">Ceilisphere design</a></p>
                 </div>
 
-                <div class="col-12 col-md-6">
+                <div class="col-sm-12 col-md-6">
                     <h2>Say hi!<a href="mailto:hi@keylseysloan.com"><i class="fa fa-envelope-o"></i></a></h2>
                     <h3>Let's connect!</h3>
                     <ul class="social-icons">
