responsive homepage done

--- a/index.html
+++ b/index.html
@@ -25,8 +25,20 @@
         <header>
             <div class="row">
 	            <div class="col-sm-12">
-	            	<div class="">
+	            	<div class="header-logo">
 	                	<h1>Kelsey Sloan</h1>
+	                </div>
+
+	                <div class="nav">	
+	                	<nav>
+	                		<ul>
+	                			<li><a href="about/index.html">About</a></li>
+		                        <li><a href="blog/index.html">Blog</a></li>
+		                        <li><a href="recipes/index.html">Recipes</a>
+		                        <a href="#contact">Contact</a></li>
+		                        <li><a href="#search"><i class="fa fa-search"></i></a></li>
+	                		</ul>
+	                	</nav>
 	                </div>	
 	            
 	                <div class="dropdown">
